Backend reaches front end

--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-	<div id="form-div" class="hidden">
+	<div id="formDiv" class="hidden">
 	<form id="quiz-card-form">
       <label for="1">First Option</label>
       <input type="text" id="1">
@@ -23,10 +23,10 @@
 
 	<div id="main">
   <h1>Enter Your Name:</h2>
-    <form id="player-form">
+    <form id="playerform">
       <input type="text" id="name">
   <h1>Select Your Name:</h1>
-      <select id="name-select">
+      <select id="nameselect">
       </select>
       <br><input type="submit" value="Submit">
     </form>
