--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -17,7 +17,7 @@
       <input type="text" id="2">
       <label for="3">Third Option</label>
       <input type="text" id="3">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Done">
     </form>
 	</div>
 
