--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -12,11 +12,11 @@
 	<div id="formDiv" class="hidden">
 	<form id="quiz-card-form">
       <label for="1">First Option</label>
-      <input type="text" id="1">
+      <textarea rows="4"cols="50" id="1"></textarea><br>
       <label for="2">Second Option</label>
-      <input type="text" id="2">
+      <textarea rows="4"cols="50" id="2"></textarea><br>
       <label for="3">Third Option</label>
-      <input type="text" id="3">
+      <textarea rows="4"cols="50" id="3"></textarea><br>
       <input type="submit" value="Done">
     </form>
 	</div>
