Working on card functionality

--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -19,9 +19,12 @@
       <textarea rows="4"cols="50" id="3"></textarea><br>
       <input type="submit" value="Done">
     </form>
-	</div>
 
-	<div id="main">
+	</div>
+	<div id="quiz-card-area">
+	</div>
+	
+	<div id="name-form">
   <h1>Enter Your Name:</h2>
     <form id="playerform">
       <input type="text" id="name">
