--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -22,8 +22,9 @@
 
 	</div>
 	<div id="quiz-card-area">
+	<span class="hidden">Correct Answers = 0</span>
 	</div>
-	
+
 	<div id="name-form">
   <h1>Enter Your Name:</h2>
     <form id="playerform">
