--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -22,7 +22,7 @@
 
 	</div>
 	<div id="quiz-card-area">
-	<span class="hidden">Correct Answers = 0</span>
+	<span class="hidden"></span>
 	</div>
 
 	<div id="name-form">
@@ -39,7 +39,13 @@
       <br><input type="submit" value="Submit">
     </form>
 		<h4 id="sign-up">I'm a new player, sign me up!</h4>
+	</div>
+
+	<div id="game-over" class="hidden">
+		<h4 id="game-over-text">GAME OVER</h4>
+	</div>
+
   <script src="index.js"></script>
-</div>
+
 </body>
 </html>
