--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -11,7 +11,8 @@
 <body>
 	<h1 id="game-title">Truths & Lies</h1>
 	<div id="formDiv" class="hidden">
-	<form id="quiz-card-form">
+	<form id="quiz-card-form"><br>
+			<text style="font-family: 'Open Sans', sans-serif;">*Make sure one of these is a lie!*</text><br>
       <label for="1">First Fact</label><br>
       <textarea rows="4"cols="30" id="1"></textarea><br>
       <label for="2">Second Fact</label><br>
