Named app in <title> tag

--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -5,7 +5,7 @@
     type = "text/css"
     href = "style.css" />
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Truths/Lies</title>
 	<link href="https://fonts.googleapis.com/css?family=Kirang+Haerang|Open+Sans" rel="stylesheet">
 </head>
 <body>
